<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recipe Book</string>
    <string name="recipe_book">Recipe Book</string>
    <string name="welcome_to">Welcome to</string>
    <string name="email">Type your Email</string>
    <string name="password">Type your Password</string>
    <string name="label">Login</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login_with">Login with</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="welcome_dav">Welcome </string>
    <string name="swipeText">Swipe to search by ingredients</string>
    <string name="search_by_r">Search by Recipe</string>
    <string name="search_by_r_II">Search by Ingredients</string>
    <string name="searchPlaceholder">What recipe are you looking for?</string>
    <string name="searchPlaceholder_II">What ingredient are you looking for?</string>
    <string name="item_placeholder">Banana Cinnamon Roll Casserole</string>
    <string name="explore">Explore more recipes</string>
    <string name="arrow">arrow</string>
    <string name="swipe">swipe</string>
    <string name="back">back_arrow</string>
    <string name="swipeText_II">Swipe to search by recipes</string>
    <string name="notification">Notifications</string>
    <string name="clear">Clear notifications</string>
    <string name="recipes">Recipes</string>
    <string name="networks">Networks</string>
    <string name="friends">Friends</string>
    <string name="favourites">Favourites</string>
    <string name="uploads">Uploads</string>
    <string name="notificationTitle">Adebayo Apercu sent you a message</string>
    <string name="notificationDate">Yesterday</string>
    <string name="chatsPage">Chats</string>
    <string name="nameChat">Adebayo Apercu</string>
    <string name="chat_message">A selection of chicken </string>
    <string name="friendsPage">Friends</string>
    <string name="friendsSubTitle">My Friends</string>
    <string name="friendName">Adebayo Apercu</string>
    <string name="friendsNum">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="editText">Edit</string>
    <string name="profile_name">Your Name! Click Edit</string>
    <string name="friends_count">0</string>
    <string name="networks_count">0</string>
    <string name="uploads_count">0</string>
    <string name="friends_count_title">FRIENDS</string>
    <string name="networks_count_title">NETWORKS</string>
    <string name="uploads_count_title">UPLOADS</string>
    <string name="unfollow_name">Courtney Bennett</string>
    <string name="about">About</string>
    <string name="about_text">Combining data, design, and machine learning to build intelligent products and services that improve people\'s lives.</string>
    <string name="likes">Likes</string>
    <string name="searchFriends">Search Friends</string>
    <string name="networksPage">Networks</string>
    <string name="searchNetworks">Search Networks</string>
    <string name="networksSubTitle">Networks you joined</string>
    <string name="networks_explore">Explore more networks</string>
    <string name="favouritesPage">Favourites</string>
    <string name="first_recipe_title">Sausage &amp; Peppers Group </string>
    <string name="what_s_your_name">Enter your name?</string>
    <string name="recipeName">Waffle Berries Closeup</string>
    <string name="details">Recipe by</string>
    <string name="name_openRecipe">Collins `Damawa</string>
    <string name="rate">Rate Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">See direction for preperation</string>
    <string name="similar_recipe">3 Similar Recipes to try out</string>
    <string name="ingre">1/4 cup cornmeal</string>
    <string name="_1">1</string>
    <string name="welcome_to_recipe_book">Welcome To Recipe Book</string>
    <string name="networks_you_joined">Networks you joined will appear here</string>
    <string name="users_on_recipe_book">Users on Recipe Book</string>
    <string name="your_favourite_recipes_appears_here">Your favourite recipes appears here</string>

</resources>