<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unfollowFirstLayout"
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:background="@drawable/profile_rectangle"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_marginTop="45dp"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="20dp">

                <!-- Back -->
                <ImageView
                    android:id="@+id/back"
                    android:layout_width="45.5dp"
                    android:layout_height="45.5dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/back"
                    android:src="@drawable/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>


        <ImageView
            android:id="@+id/unfollow_image"
            android:layout_width="103dp"
            android:layout_height="103dp"
            android:layout_marginTop="90.22dp"
            android:src="@drawable/unfollow_avi"
            app:layout_constraintStart_toStartOf="@+id/unfollowFirstLayout"
            app:layout_constraintEnd_toEndOf="@+id/unfollowFirstLayout"
            app:layout_constraintTop_toTopOf="@id/unfollowFirstLayout"/>

        <!-- Name -->
        <TextView
            android:id="@+id/unfollow_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/unfollow_name"
            android:textAppearance="@style/unfollow_name"
            android:lineSpacingExtra="13sp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/unfollow_image"
            app:layout_constraintStart_toStartOf="@+id/unfollowFirstLayout"
            app:layout_constraintEnd_toEndOf="@+id/unfollowFirstLayout" />

        <!-- Count -->
        <TextView
            android:id="@+id/friends_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/friends_count"
            android:textAppearance="@style/friends_count"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/unfollow_name"
            app:layout_constraintStart_toStartOf="@id/unfollowFirstLayout"
            app:layout_constraintEnd_toStartOf="@id/networks_count"
            />

        <!-- Count -->
        <TextView
            android:id="@+id/networks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/networks_count"
            android:textAppearance="@style/networks_count"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/unfollow_name"
            app:layout_constraintEnd_toStartOf="@id/uploads_count"
            app:layout_constraintStart_toEndOf="@id/friends_count"
            />

        <!-- Count -->
        <TextView
            android:id="@+id/uploads_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/uploads_count"
            android:textAppearance="@style/uploads_count"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@+id/unfollow_name"
            app:layout_constraintStart_toEndOf="@id/networks_count"
            app:layout_constraintEnd_toEndOf="@id/unfollowFirstLayout"
            />

        <!-- Count -->
        <TextView
            android:id="@+id/friends_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="top"
            android:lineSpacingExtra="6sp"
            android:text="@string/friends_count_title"
            android:textAppearance="@style/friends_count_title"
            android:translationY="-3sp"
            app:layout_constraintEnd_toEndOf="@id/friends_count"
            app:layout_constraintStart_toStartOf="@id/friends_count"
            app:layout_constraintTop_toBottomOf="@+id/friends_count" />

        <!-- Count -->
        <TextView
            android:id="@+id/networks_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="top"
            android:lineSpacingExtra="6sp"
            android:text="@string/networks_count_title"
            android:textAppearance="@style/networks_count_title"
            android:translationY="-3sp"
            app:layout_constraintEnd_toEndOf="@id/networks_count"
            app:layout_constraintStart_toStartOf="@id/networks_count"
            app:layout_constraintTop_toBottomOf="@+id/networks_count" />

        <!-- Count -->
        <TextView
            android:id="@+id/uploads_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="top"
            android:lineSpacingExtra="6sp"
            android:text="@string/uploads_count_title"
            android:textAppearance="@style/uploads_count_title"
            android:translationY="-3sp"
            app:layout_constraintEnd_toEndOf="@id/uploads_count"
            app:layout_constraintStart_toStartOf="@id/uploads_count"
            app:layout_constraintTop_toBottomOf="@+id/uploads_count" />

        <View
            android:id="@+id/removeFriendView"
            android:layout_width="121dp"
            android:layout_height="39dp"
            android:layout_marginTop="24dp"
            android:elevation="10dp"
            android:background="@drawable/search_field"
            app:layout_constraintStart_toStartOf="@+id/unfollowFirstLayout"
            app:layout_constraintEnd_toEndOf="@+id/unfollowFirstLayout"
            app:layout_constraintTop_toBottomOf="@+id/networks_count_title"
            />

        <!-- Search -->
        <TextView
            android:id="@+id/remove_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/add_friend"
            android:textAppearance="@style/remove_friend"
            android:lineSpacingExtra="10sp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="@+id/removeFriendView"
            app:layout_constraintBottom_toBottomOf="@+id/removeFriendView"
            app:layout_constraintStart_toStartOf="@+id/removeFriendView"
            app:layout_constraintEnd_toEndOf="@+id/removeFriendView"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unfollowSecondLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="-34dp"
        android:translationZ="46dp"
        android:background="@drawable/card"
        app:layout_constraintTop_toBottomOf="@id/unfollowFirstLayout">

        <!-- About -->
        <TextView
            android:id="@+id/unfollow_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:text="@string/about"
            android:textAppearance="@style/about"
            android:lineSpacingExtra="17sp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="@+id/unfollowSecondLayout"
            app:layout_constraintTop_toTopOf="@+id/unfollowSecondLayout" />

        <!-- Text -->
        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="38dp"
            android:layout_marginTop="6dp"
            android:text="@string/about_text"
            android:textAppearance="@style/about_text"
            android:lineSpacingExtra="5sp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/unfollow_about"
            app:layout_constraintStart_toStartOf="@id/unfollowSecondLayout"
            app:layout_constraintEnd_toEndOf="@id/unfollowSecondLayout" />

        <TextView
            android:id="@+id/likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="30dp"
            android:text="@string/likes"
            android:textAppearance="@style/likes"
            android:lineSpacingExtra="17sp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="@+id/unfollowSecondLayout"
            app:layout_constraintTop_toBottomOf="@+id/about_text" />





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>